@@ -9,7 +9,7 @@
     <dependencies>
         <dependency>
             <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-grizzly2-servlet</artifactId>
+            <artifactId>jersey-grizzly2</artifactId>
             <version>${jersey-version}</version>
         </dependency>
         <!-- uncomment this to get JSON support:
